samples/_failures_safe/1761498210_7b7b65_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a0b8b19b.c: In function ‘main’:
./samples/SAFE/__tmp_a0b8b19b.c:149:22: error: expected ‘)’ at end of input
  149 |         if (cycle > 0
      |            ~         ^
      |                      )
./samples/SAFE/__tmp_a0b8b19b.c:149:9: error: expected declaration or statement at end of input
  149 |         if (cycle > 0
      |         ^~
./samples/SAFE/__tmp_a0b8b19b.c:149:9: error: expected declaration or statement at end of input
